[package]
name = "demo_respo"
version = "0.0.1"
edition = "2021"
description = "Demo app for Respo"
license = "Apache-2.0"
repository = "https://github.com/Respo/respo.rs"
homepage = "http://respo-mvc.org"
documentation = "https://docs.rs/crate/respo/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
respo = { path = "../respo/" }
js-sys = "0.3.64"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.188", features = [ "derive" ] }
serde_json = "1.0.106"
uuid = { version = "1.4.1", features = [ "v4", "js" ] }

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  'Document',
  "HtmlHeadElement",
  'Element',
  'Window',
  "HtmlElement",
  "HtmlInputElement",
  "MouseEvent",
  "KeyboardEvent",
  "InputEvent",
  "Node",
  "NodeList",
  "Element",
  "HtmlCollection",
  "CssStyleDeclaration",
  "FocusEvent",
  "HtmlLabelElement",
  "BeforeUnloadEvent",
  "Storage"
]
