[package]
name = "demo_respo"
version = "0.0.1"
edition = "2021"
description = "Demo app for Respo"
license = "Apache-2.0"
repository = "https://github.com/Respo/respo.rs"
homepage = "http://respo-mvc.org"
documentation = "https://docs.rs/crate/respo/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoize = "0.4.2"
respo = { path = "../respo/" }
js-sys = "0.3.76"
wasm-bindgen = "0.2.93"
console_error_panic_hook = "0.1.7"
uuid = { version = "1.11.0", features = ["v4", "js"] }
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
respo_state_derive = { path = "../respo_state_derive" }

[dependencies.web-sys]
version = "0.3.76"
features = [
  "console",
  'Document',
  "HtmlHeadElement",
  'Element',
  'Window',
  "HtmlElement",
  "HtmlInputElement",
  "MouseEvent",
  "KeyboardEvent",
  "InputEvent",
  "Node",
  "NodeList",
  "Element",
  "HtmlCollection",
  "CssStyleDeclaration",
  "FocusEvent",
  "HtmlLabelElement",
  "BeforeUnloadEvent",
  "Storage",
]
