[package]
name = "respo"
version = "0.0.17"
edition = "2021"
description = "a tiny virtual DOM library migrated from ClojureScript"
license = "Apache-2.0"
repository = "https://github.com/Respo/respo.rs"
homepage = "http://respo-mvc.org"
documentation = "https://docs.rs/crate/respo/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"
cirru_parser = "0.1.24"
rust-hsluv = "0.1.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.61"
features = [
  "console",
  'Document',
  "HtmlHeadElement",
  'Element',
  'Window',
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "MouseEvent",
  "KeyboardEvent",
  "KeyboardEventInit",
  "InputEvent",
  "Node",
  "NodeList",
  "Element",
  "HtmlCollection",
  "CssStyleDeclaration",
  "FocusEvent",
  "HtmlLabelElement",
  "BeforeUnloadEvent",
]
