[package]
name = "respo"
version = "0.1.9"
edition = "2021"
description = "a tiny virtual DOM library migrated from ClojureScript"
license = "Apache-2.0"
repository = "https://github.com/Respo/respo.rs"
homepage = "https://respo-mvc.org"
documentation = "https://docs.rs/crate/respo/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
lazy_static = "1.4.0"
cirru_parser = "0.1.31"
# cirru_parser = { path = "/Users/chenyong/repo/cirru/parser.rs" }
rust-hsluv = "0.1.4"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
# respo_state_derive = { path = "../respo_state_derive" }
respo_state_derive = "0.0.1"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.69"
features = [
  "console",
  'Document',
  "HtmlHeadElement",
  'Element',
  'Window',
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "MouseEvent",
  "KeyboardEvent",
  "KeyboardEventInit",
  "InputEvent",
  "Node",
  "NodeList",
  "Element",
  "HtmlCollection",
  "CssStyleDeclaration",
  "FocusEvent",
  "HtmlLabelElement",
  "BeforeUnloadEvent",
  "Storage",
]
