[package]
name = "respo_router"
version = "0.0.1"
edition = "2021"
description = "Router for Respo"
license = "Apache-2.0"
repository = "https://github.com/Respo/respo.rs"
homepage = "https://respo-mvc.org"
documentation = "https://docs.rs/crate/respo_router/"
readme = "README.md"


[dependencies]
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"


[lib]
crate-type = ["cdylib", "rlib"]
